refactor: 대시보드 및 성능 테스트 컴포넌트 간소화